--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@angular/cdk": "^17.3.0",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
-    "@angular/core": "^17.3.0",
+    "@angular/core": "^17.3.12",
     "@angular/forms": "^17.3.0",
     "@angular/material": "^17.3.0",
     "@angular/platform-browser": "^17.3.0",
@@ -26,6 +26,7 @@
     "@ngrx/store-devtools": "^17.1.0",
     "dexie": "^3.2.6",
     "music": "file:",
+    "ngrx-store-localstorage": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -35,6 +36,7 @@
     "@angular/cli": "^17.3.11",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/uuid": "^10.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
